# JobAppTauri

./: .gitignore  DEVELOPMENT_RULES.md  Planning.md  README.md  app.py  architecture.md  docker-compose.yml  documentation.md  documentation_complete.md  extract_cv.py  init_fixed.sh  init_tauri_project.sh  interface_graphique_conception.md  jobs.db  package-lock.json  package.json  pasted_content.txt  requirements.txt  schema_donnees.md  schema_modifications.sql  setup_database.py  setup_docker.sh  stack_technique.md  task.md  tauri_electron_comparison.md  todo.md
.cursor/rules/: ai.mdc  codestructuremodularity.mdc  context.mdc  devrules.mdc  explainability.mdc  taskcompletion.mdc  testing.mdc
app-tauri/: cypress.config.ts  jest.config.js  package-lock.json  package.json  run_app.sh  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
app-tauri/cypress/component/: JobCard.cy.tsx
app-tauri/cypress/e2e/: auth.cy.ts  documents.cy.ts  jobs.cy.ts  login.cy.ts
app-tauri/cypress/support/: component.ts  e2e.ts
app-tauri/scripts/: remove-vitest-imports.js
app-tauri/src/: App.module.css  App.tsx  TASK.md  api.ts  commands.rs  index.css  models.rs  move_styles.ps1  setupTests.ts  types.ts
app-tauri/src-tauri/: Cargo.toml  tauri.conf.json
app-tauri/src-tauri/docs/: database.md
app-tauri/src-tauri/migrations/: 0001_initial_schema.sql  0002_kanban_tables.sql  0002_update_applications.sql  001_initial.sql  20240218_initial_schema.sql  20240416_create_documents_table.sql  20240417_add_constraints.sql  20240417_add_indexes.sql  20240417_restructure_user_tables.sql
app-tauri/src-tauri/src/: auth.rs  commands.rs  db.rs  error.rs  lib.rs  main.rs  main.rs.old  migrations.rs  models.rs  search_preferences.rs
app-tauri/src-tauri/src/auth/: mod.rs
app-tauri/src-tauri/src/commands/: applications.rs  auth.rs  backup.rs  documents.rs  favorites.rs  jobs.rs  kanban.rs  mod.rs  search.rs  statistics.rs  user_profile.rs
app-tauri/src-tauri/src/database/: backup.rs  config.rs  migrations.rs  mod.rs  operations.rs
app-tauri/src-tauri/src/db/: db.rs  schema.sql
app-tauri/src-tauri/src/models/: application.rs  application_stats.rs  company.rs  document.rs  document_template.rs  generated_document.rs  job.rs  job_stats.rs  kanban.rs  llm_provider.rs  mod.rs  search_preference.rs  sql_models.rs  traits.rs  types.rs  user.rs  user_profile.rs
app-tauri/src-tauri/src/models/tests/: application_test.rs
app-tauri/src-tauri/src/types/: mod.rs
app-tauri/src-tauri/tests/: application_test.rs  applications_test.rs  auth_test.rs  benchmarks_test.rs  commands.rs  commands_test.rs  documents_test.rs  favorites.rs  job_repository_tests.rs  job_stats.rs  jobs_test.rs  kanban_tests.rs  migration_test.rs  mod.rs  models.rs  models_test.rs  performance_test.rs  queries_test.rs  search_preference_tests.rs  search_test.rs  sqlite_test.rs  statistics.rs  user_profile_repository_tests.rs  user_repository_tests.rs
app-tauri/src/__tests__/: helpers.ts  setup.ts
app-tauri/src/__tests__/fixtures/: date.ts  job.ts  jobs.ts  models.ts  performance.ts  props.ts
app-tauri/src/components/: ActiveFilters.tsx  ApplicationStats.tsx  Dashboard.tsx  DocumentForm.tsx  DocumentList.module.css  DocumentList.tsx  DocumentManager.tsx  DocumentModal.tsx  FavoritesManager.tsx  InterviewForm.tsx  JobCard.module.css  JobCard.tsx  JobDetails.tsx  JobForm.tsx  JobModal.tsx  JobSearch.tsx  JobSearchResults.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardForm.tsx  KanbanColumn.tsx  KanbanForm.tsx  KanbanModal.tsx  LazyLoad.tsx  Navigation.module.css  Navigation.tsx  PreloadProgress.tsx  SearchAlerts.tsx  SearchFilters.tsx  SearchForm.tsx  SearchResults.test.tsx  SearchResults.tsx  StatisticsDashboard.tsx
app-tauri/src/components/__tests__/: DocumentForm.performance.test.tsx  DocumentModal.performance.test.tsx  JobCard.test.tsx  JobForm.performance.test.tsx  JobModal.performance.test.tsx  KanbanForm.performance.test.tsx  KanbanModal.performance.test.tsx  Navigation.test.tsx  SearchResults.test.tsx  move_tests.ps1
app-tauri/src/components/applications/: ApplicationDetails.tsx  ApplicationForm.tsx  ApplicationList.tsx
app-tauri/src/components/kanban/: KanbanCard.tsx  KanbanColumn.tsx
app-tauri/src/components/navigation/: types.ts
app-tauri/src/components/search/: SearchBar.tsx  SearchFilters.tsx  SearchResults.tsx
app-tauri/src/contexts/: AuthContext.tsx
app-tauri/src/docs/: api.md
app-tauri/src/hooks/: useApplicationStats.ts  useAuth.ts  useCache.ts  useDocument.ts  useJob.ts  useJobSearch.ts  useJobStats.ts  useKanban.d.ts  useKanban.ts  useKanbanBoard.ts  usePreloadData.ts  useTauri.ts
app-tauri/src/pages/: Commute.tsx  Dashboard.module.css  Dashboard.tsx  Documents.tsx  Jobs.tsx  Kanban.tsx  Login.tsx  Profile.tsx  Register.tsx  Search.tsx  SearchPage.tsx  SearchPreferences.tsx  Settings.tsx  Stats.tsx
app-tauri/src/pages/__tests__/: Dashboard.performance.test.tsx  Kanban.test.tsx  Profile.performance.test.tsx  Search.test.tsx  (+1 more)
app-tauri/src/services/: api.ts  applicationService.ts  job.ts  kanban.ts  searchPreferences.ts
app-tauri/src/store/: index.ts  kanban.ts
app-tauri/src/styles/: theme.ts
app-tauri/src/test/: global.d.ts  setup.ts  test-utils.tsx  vitest.d.ts
app-tauri/src/types/: core.ts  documents.ts  index.ts  interview.ts  job.ts  kanban.ts  llm.ts  migrations.md  models.ts  search.ts  services.d.ts  statistics.ts  tauri.d.ts  user.ts  vitest.d.ts
docs/: PLANNING.md  api.md  api_documentation.md  contribution_guide.md  deployment_guide.md  migration_guide.md  usage_examples.md  usage_guide.md
modules/: ai_suggestions.py  content_generator.py  cv_parser.py  duplicate_detector.py  job_scraper.py  kanban.py  kanban_feedback.py  llm_api_manager.py  location_manager.py  matching_engine.py  nocodb_integration.py  search_preferences.py  transport_scraper.py  transport_scraper_v2.py
modules/__tests__/: test_kanban.py
my-job-app/tauri-app/: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
templates/: cover_letter_prompt.txt  cv_prompt.txt
(+26 files in other folders)
