[package]
name = "app-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["shell-open"] }
tokio = { version = "1.0", features = ["full"] }
tauri-plugin-sql = { version = "2.0.0-rc.4", features = ["sqlite"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
bcrypt = "0.15"
argon2 = { version = "0.5", features = ["std"] }
rand = { version = "0.8", features = ["std", "std_rng"] }
jsonwebtoken = "9.2"
password-hash = "0.5"
base64 = "0.21"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
test-log = "0.2"
tempfile = "3.10"

[features]
custom-protocol = ["tauri/custom-protocol"]
